tests/typechecker/fail/014-mutable-vars.hyg
let mutable x: int = 0;
x <- x + 1;
{
    let x: int = 3;
    x <- x + 1 // Gets stuck because the assignment lhs is replaced with 3
}
